# quickerfix

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml  codeql.yaml
include/quickerfix/: FixConfigParser.h  Hello.h
include/quickerfix/fix/: Field.h  Fix.h
spec/: FIX42.xml
src/: CMakeLists.txt  FixConfigParser.cpp  Hello.cpp
src/fix/: Field.cpp  Fix.cpp
test/: CMakeLists.txt  TestFixConfigParser.t.cpp  TestHello.t.cpp
